--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "pandera (>=0.26.1,<0.27.0)",
+    "pandas (>=2.3.2,<3.0.0)"
 ]
 
 
